fix blank image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <main id="camera">
             <canvas id="camera-sensor"></canvas>
             <video id="camera-view" autoplay playsinline></video>
-            <img id="camera-output" src="//:0">
+            <img id="camera-output" src="data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22/%3E">
             <button id="camera-trigger">Take a picture</button>
         </main>
 
