misc adjustments, and remove undeclared (and unused) track variable

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     </head>
     <body>
         <main id="camera">
-            <canvas id="camera-sensor"></canvas>
-            <video id="camera-view" autoplay playsinline></video>
-            <img id="camera-output" src="data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22/%3E">
-            <button id="camera-trigger">Take a picture</button>
+            <canvas></canvas>
+            <video autoplay playsinline></video>
+            <img src="data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22/%3E">
+            <button>Take a picture</button>
         </main>
 
         <script type="module" src="app.js"></script> 
